syntax = "proto3";

option go_package = "get_users_with_sql_inject_proto/pb";

service get_users {
  rpc GetData(GetDataRequest) returns (GetDataResponse) {}
}

message User {
  string  id        = 1;
  string name      = 2;
  string family    = 3;
  int32  age       = 4;
  string sex       = 5;
  string createdAt = 6;
}

message GetDataRequest {
  string  user_id    = 1;
  string auth_key   = 2;
  int32  message_id = 3;
}


message GetDataResponse {
  repeated User return_users = 1;
  int32 message_id = 2;
}
